--- a/08-Spatial-Operations-and-Vector-Overlays.Rmd
+++ b/08-Spatial-Operations-and-Vector-Overlays.Rmd
@@ -45,13 +45,17 @@ Set algebra consists of four basic operators:
 
 If you have a GIS layer of major cities and you want to identify all census tracts having a population count greater than 50000, you would write the expression as `"POP" > 50000` (of course, this assumes that the attribute field name for population count is `POP`).
 
-```{r f08-sel1, echo=FALSE, fig.cap = "An example of *selection by attributes* tool in ArcMap  where it is accessed from the *Selection* pull-down menu.", out.width=358}
+```{r f08-sel1, echo=FALSE, fig.cap = "An example of the *Select Layer by Attributes* tool in ArcGIS Pro  where the pull-down menu is used to define the selection.", out.width=358}
 
 knitr::include_graphics("img/Select_attribute_1.jpg")
 ```
 
+```{r f08-sel2, echo=FALSE, fig.cap = "An example of the *Select Layer by Attributes* tool in ArcGIS Pro  where the SQL syntax is used to define the selection.", out.width=358}
 
-```{r f08-sel1-result, echo=FALSE, fig.cap = "Selected cities meeting the criterion are shown in cyan color."}
+knitr::include_graphics("img/Select_attribute_2.jpg")
+```
+
+```{r f08-sel1-result, echo=FALSE, fig.cap = "Selected cities meeting the criterion are shown in cyan color in ArcGIS Pro."}
 knitr::include_graphics("img/Select_cities.svg")
 ```
 
@@ -69,7 +73,7 @@ You can combine conditions from set algebra operations using the following Boole
 Following up with the last example, let's now select cities having a population greater than 50000 and that are in the US (and not Canada or Mexico). Assuming that the country field is labeled `FIPS_CNTRY` we could setup the expression as `"POP" > 50000 AND "FIPS_CNTRY" = US`. Note that a value need not be numeric. In this example we are asking that an attribute value equal a specific string value (i.e. that it equal the string `'US'`).
 
 
-```{r f08-sel2, echo=FALSE, fig.cap = "Selected cities meeting `POP > 50000` AND `FIPS_CNTRY == US` criteria are shown in cyan color."}
+```{r f08-sel3, echo=FALSE, fig.cap = "Selected cities meeting `POP > 50000` AND `FIPS_CNTRY == US` criteria are shown in cyan color."}
 knitr::include_graphics("img/Select_cities_2.svg")
 ```
 
@@ -77,9 +81,9 @@ knitr::include_graphics("img/Select_cities_2.svg")
 
 We can also select features from *one* GIS layer based on their spatial association with *another* GIS layer. This type of spatial association can be broken down into four categories: **adjacency** (whether features from one layer *share* a boundary with features of another), **containment** (whether features from one layer are *inside* features of another), **intersection** (whether features of one layer *intersect* features of another), and **distance** (whether one feature is within a certain *distance* from another).
 
-Continuing with our working example, we might be interested in cities that are within 100 miles of recent earthquakes. The earthquake points are from another GIS layer called `Earthquakes (Sep 2013)`. 
+Continuing with our working example, we might be interested in `Cities` that are within 100 miles of earthquakes. The earthquake points are from another GIS layer called `Earthquakes`. 
 
-```{r f08-loc1, echo=FALSE, fig.cap = "An example of a *selection by location* tool in ArcMap  where it is accessed from the *Selection* pull-down menu.", out.width=420}
+```{r f08-loc1, echo=FALSE, fig.cap = "An example of a *Select Layer by Location* tool in ArcGIS Pro. The spatial association chosen is distance.", out.width=300}
 
 knitr::include_graphics("img/Select_location_1.jpg")
 ```
@@ -89,12 +93,6 @@ knitr::include_graphics("img/Select_location_1.jpg")
 knitr::include_graphics("img/Cities_earthquakes.svg")
 ```
 
-
-You can, of course, combine multiple selection criteria (both by attribute and location), but be careful when selecting from an existing selection in ArcMap: in both the *Selection by Location* window and the *Selection by Attribute* window, you must explicitly set the option to *select from an existing selection*.
- 
-```{r echo=FALSE, out.width=399}
-knitr::include_graphics("img/Select_from_selection.jpg")
-``` 
 
 ## Vector Overlay
 
@@ -108,7 +106,7 @@ Map overlay refers to a group of procedures and techniques used in combining inf
 
 **Clipping** takes one GIS layer (the *clip* feature) and another GIS layer (the to-be-clipped input feature). The output is a clipped version of the original input layer. The output attributes table is a subset of the original attributes table where only records for the clipped polygons are preserved.
 
-```{r echo=FALSE}
+```{r f08-clip, fig.cap = "The Maine counties polygon layer is clipped to the circle polygon. Note that the ouput layer is limited to the county polygon geometry and its attributes (and does not include the clipping circle polygon).", echo=FALSE}
 knitr::include_graphics("img/Clip.svg")
 ``` 
 
@@ -116,7 +114,7 @@ knitr::include_graphics("img/Clip.svg")
 
 **Intersecting** takes both layers as inputs then outputs the features from both layers that share the same spatial extent. Note that the output attribute table inherits attributes from *both* input layers (this differs from *clipping* where attributes from just one layer are carried through).
 
-```{r echo=FALSE}
+```{r f08-intersect, fig.cap = "The Maine counties polygon layer is intersected with the circle polygon. The ouput layer combines both intersecting geometries and attributes.", echo=FALSE}
 knitr::include_graphics("img/Intersect.svg")
 ``` 
 
@@ -124,7 +122,7 @@ knitr::include_graphics("img/Intersect.svg")
 
 **Unioning** overlays both input layers and outputs *all* features from the two layers. Features that overlap are intersected creating new polygons. This overlay usually produces more polygons than are present in both input layers combined. The output attributes table contains attribute values from *both* input features (note that only a *subset* of the output attributes table is shown in the following figure).
 
-```{r echo=FALSE}
+```{r f08-union, fig.cap = "The Maine counties polygon layer is unioned with the circle polygon. The ouput layer combines both (complete) geometries and attributes. Where spatial overlaps do not occur, most software will either assign a NULL value or a 0.", echo=FALSE}
 knitr::include_graphics("img/Union.svg")
 ``` 
 
